--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Economica:400,700);
 
 body {
-  background: #c0392b;
+  background: #ffffff;
   font-family: 'Economica', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -12,7 +12,7 @@ body {
   width: 720px;
   height: 720px;
   border-radius: 360px;
-  border: 2px solid #fff;
+  border: 2px solid #6666ff;
   position: absolute;
   top: 100px;
   left: 100px;
